[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Mob/Mob.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy 7.png" type="Texture" id=2]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy 10.png" type="Texture" id=3]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy 11.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy 8.png" type="Texture" id=5]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy 9.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy 12.png" type="Texture" id=7]
[ext_resource path="res://resources/textures/hero/Artboard 4 copy.png" type="Texture" id=8]
[ext_resource path="res://resources/sounds/small/sound_guy_hand.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Rise hand",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0097
height = 69.6512

[node name="Mob" type="Area2D" index="0"]

position = Vector2( 735.68, 113.643 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

modulate = Color( 0.137255, 0.160784, 0.184314, 1 )
frames = SubResource( 1 )
animation = "Idle"
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 20.6552, 2.41582 )
scale = Vector2( 1, 1.2775 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Beep" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="StateTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="timeout" from="StateTimer" to="." method="change_state"]


